<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
	<LinearLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:orientation="vertical">
		<TextView
		android:layout_marginTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/createshortcutCommand" />
		<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/createshortcut_e1"
		android:hint="@string/createshortcutCommandHint" />
		<TextView
		android:layout_marginTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/createshortcutName" />
		<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/createshortcut_e2"
		android:hint="@string/createshortcutNameHint" />
		<TextView
		android:layout_marginTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/createshortcutIcon" />
		<Spinner
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/createshortcut_s1" />
		<CheckBox
		android:layout_marginTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/createshortcutRoot"
		android:id="@+id/createshortcut_check1" />
		<LinearLayout
		android:layout_marginTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
			<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="OK"
			android:layout_weight="0.5" 
			android:id="@+id/createshortcut_b1" />
			<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="Cancel"
			android:layout_weight="0.5"
			android:id="@+id/createshortcut_b2" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
